# ecds-shock-index

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
blog/: ecds-shock-index.md
data/raw/: example_cms_measure_weights.csv  example_ncqa_ecds.csv
docs/: literature-evaluation.md
notebooks/: 00-overview.ipynb
src/: cli.py
src/ecds_shock_index/: __init__.py  data_loader.py
tests/: test_batch.py  test_cli.py  test_core.py  test_data_loader.py
