[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecds-shock-index"
version = "0.1.0"
description = "Analytics toolkit for modeling ECDS distribution risk in Medicare Advantage Stars."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "ECDS Shock Index Contributors" }
]
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "jupyter>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
